	-Organization improvements: outputs moved to a subdirectory on the desktop, rather than loose.
	-Script will now check to see if loopback pinentry is enabled. If it is not, it will ask the user for permission to add it, or disable signing-by-default.

v0.3.0 (legacy):
    -Multiprocessing is now used for some steps of operation.
    --Decision was made to improve performance.
    -Discontinued the use of bz2 compression for performance reasons. Increased op time unjustified.
    -Changed structure of the compression operation, may lead to performance impacts. See readme
    -Recovery pickle is now added to all blocks(old was block1).
    -Minor fixes to various naming systems.

v1.0 (legacy):
    -Killed KeyringMode=False with fire.
    -The `--setup` flag is now deprecated. Please avoid use.
    -Removed internal requests for pin/passphrase to force pinentry popout.
    -Switched to UUIDs for the FID value, rather than a counter.
    --Eliminates Collisions
    -Fixed an issue with the blockbuild process that could generate empty blocks pointlessly.
    -Added `--genKey`, the new-key generation call.
    -Began implementation of unit testing.
    -Added "recovery path" to configuration file for testing purposes.
    -Added "output path" to configuration file for user config.
    -Returned bz2 compression in the form of the comTasker. Configured in the config.

v1.0.1 (release):
    -Fixed an issue with the globally-declared "version" variable which prevented the program from functioning.

v1.1.0 (dev):
    - Added a shebang to tapestry to make it immediately executable similar to a bash script.
    - Improved error handling to close issue #1 - missing keys are now correctly excepted.
    - Improved log formatting in the functional-tests.py script.
    - Changed the allocation routine to calculate the number of blocks it may process at once based on the available memory rather than the total system memory.