@@ -4,7 +4,7 @@ compid = Testbed
 blocksize = 4096
 expected fp = 388BB3657EAB090A9C01EC12288CBA1D80DCB8A5
 sign by default = True
-signing fp = 09A30461ED7E1388C271F4C49CD1CEE8E4473D3F
+signing fp = 388BB3657EAB090A9C01EC12288CBA1D80DCB8A5
 recovery path = /home/patches/Desktop/Tapestry FT Data/Test/Inc
 output path = /home/patches/Desktop/Tapestry FT Data/Test/
 keysize = 2048
