@@ -79,4 +79,5 @@ v1.1.0 (dev):
     - Added a shebang to tapestry to make it immediately executable similar to a bash script.
     - Improved error handling to close issue #1 - missing keys are now correctly excepted.
     - Improved log formatting in the functional-tests.py script.
-    - Changed the allocation routine to calculate the number of blocks it may process at once based on the available memory rather than the total system memory.
+    - Improved memory allocation during compression/decompression operations.
+    - Removed the limitation on workers which was previously imposed by blocksize vs. available RAM.
